stylesheets/style.css
body {
	margin: 0;
}


.container-fluid {
	max-width: 1400px;
}

.row {
	margin: 100px 0px 100px 0px;
}

/*BASIC STYLING*/

h1 {
	font-family: 'Crimson Text', Georgia, serif;
	font-weight: 400;
	line-height: 1.3em;
	letter-spacing: .03em;
}

h2 {
	font-family: 'Crimson Text', Georgia, serif;
	font-weight: 400;
	line-height: 1.3em;
	letter-spacing: .02em;
}

h3 {
	font-family: 'Crimson Text', Georgia, serif;
	font-weight: 400;
	text-transform: uppercase;
	font-size: 20px;
	letter-spacing: 0.2em;
}

h4 {
	font-family: 'Crimson Text', Georgia, serif;
	font-weight: 400;
	line-height: 1.5em;
	font-size: 20px;
}

h5{
	text-transform: uppercase;
	font-family: 'Crimson Text', Georgia, serif;
	font-weight: 400;
	letter-spacing: 0.3em;
	color: #7E8287;
	font-size: 12px;
	margin: 0;
}

p {
	font-family: 'Crimson Text', Georgia, serif;
	font-weight: 400;
	font-size: 16px;
	line-height: 1.5em;
}

a {
	text-decoration: none;
	text-transform: uppercase;
	font-family: 'Crimson Text', Georgia, serif;
	font-weight: 400;
	letter-spacing: 0.3em;
	color: #7E8287;
	font-size: 12px;
	-moz-transition: all 0.25s ease;
    -o-transition: all 0.25s ease;
    -webkit-transition: all 0.25s ease;
    transition: all 0.25s ease;
}

li {
	font-family: 'Crimson Text', Georgia, serif;
	font-weight: 400;
	font-size: 16px;
	line-height: 1.5em;
}

a:hover {
	text-decoration: none;
	color: black !important;
}

a#navLink {
	text-transform: uppercase;
}

/*Nav*/

.row#navBar {
	margin: 25px 0px 35px 0px;
}

.mobileMenu {
	position: fixed;
	top: 100px;
	bottom: 0;
	left: 0;
	right: 0;
	background-color: white;
	z-index: 10;
	opacity: 0;
	transform: translateX(100%);
	pointer-events: none;
	transition: all 0.7s;
	padding-left: 12px;
}

.is-open {
	transform: none;
	opacity: 1;
	pointer-events: auto;
}

.hamburger {
		display: none !important;
	}

.vertical-center {
  min-height: 9%;  /* Fallback for browsers do NOT support vh unit */
  min-height: 5vw; /* These two lines are counted as one :-)       */

  display: flex;
  align-items: center;
}

/*FOOTER*/

/*.footer {
	padding-left: 50px;
	padding-right: 30px;
}*/

.row#footer {
	margin: 0px 0px 50px 0px;
}

svg#instagram {
	fill: #7E8287;
	height: 18px;
	margin: 0 auto; 
	vertical-align: middle;
	-moz-transition: all 0.25s ease;
    -o-transition: all 0.25s ease;
    -webkit-transition: all 0.25s ease;
    transition: all 0.25s ease;
}

svg#instagram:hover {
	fill: black;
}

/*HOMEPAGE*/

.captionLink {
	padding-top: 25px;
/*    padding-left: 0;
    margin-left: -15px;*/
}

.image12Column:hover a {
	text-decoration: none;
	color: black;
}

.image12Column:hover {
	cursor: pointer;
}

div.image5Column:hover + .captionLink {
	text-decoration: none;
	color: black;
}

div.image6Column:hover + .captionLink {
	text-decoration: none;
	color: black;
}

.row#textRow {
	padding: 100px 0px 125px 0px;
}

.textblock3ColumnLeft {
	right: 0;
    top: 50%;
}

/*IMAGES*/

#logo {
	background-image: url('../images/JV_Logo.svg');
	background-size: contain;
	background-position: center;
	background-repeat: no-repeat;
	position: relative;
	height: 0;
	padding-top: 5%;
}

.image12Column {
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	position: relative;
	-moz-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
    -o-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
    -webkit-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  	transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  	width: 100%;
  	height: 0;
	padding-top: 45%;
	border-left: 15px solid #FFFFFF;
	border-right: 15px solid #FFFFFF;
}

.image5Column {
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	position: relative;
	-moz-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
    -o-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
    -webkit-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  	transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  	height: 0;
	padding-top: 35%;
	border-left: 15px solid #FFFFFF;
	border-right: 15px solid #FFFFFF;
}

.image6Column {
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	position: relative;
	-moz-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
    -o-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
    -webkit-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  	transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  	height: 0;
	padding-top: 35%;
	margin-top: 35px;
	border-left: 15px solid #FFFFFF;
	border-right: 15px solid #FFFFFF;
}

.design6Column {
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	position: relative;
	-moz-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
    -o-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
    -webkit-transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  	transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  	height: 0;
	padding-top: 55%;
	margin-top: 35px;
}



#homepageOne.image12Column {
	background-image: url('../images/tamago_large_02.jpg');
}


#homepageTwo.image5Column {
	background-image: url('../images/aguacate_small_01.jpg');
}

#homepageThree.image12Column {
	background-image: url('../images/carpenter_large_01.jpg');
}

#homepageFour.image6Column {
	background-image: url('../images/stacking_small_01.jpg');
}

#homepageFive.image6Column {
	background-image: url('../images/korean_small_03.jpg');
}

#homepageSix.image12Column {
	background-image: url('../images/diningtable_1.png');
}

#homepageSeven.image6Column {
	background-image: url('../images/toriichair_1.png');
}

#homepageEight.image6Column {
	background-image: url('../images/equipalechair_1.png');
}


/*DESIGNS*/

#designsOne.design6Column {
	background-image: url('../images/aguacate_large_02.jpg');
}

#designsTwo {
	background-image: url('../images/carpenter_large_01.jpg');
}

#designsThree {
	background-image: url('../images/korean_large_01.jpg');
}

#designsFour {
	background-image: url('../images/stacking_large_02.jpg');
}

#designsFive {
	background-image: url('../images/tamago_large_02.jpg');
}

.designCaptionLink {
	padding-top: 25px;
	padding-left: 0px;
}

#designsSix {
	background-image: url('../images/diningtable_2.png');
}

#designsSeven {
	background-image: url('../images/toriichair_2.png');
}

#designsEight {
	background-image: url('../images/equipalechair_2.png');
}

/*ABOUT*/

#aboutOne.image5Column {
	background-image: url('../images/DSC_0108.jpg');
	padding-top: 55%;
}


/*COming Soon*/ 
#comingSoon {
	background-image: url('../images/ComingSoon_Soban.jpg');
/*	border-right: 15px solid #FFFFFF;
*/	height: 0;
	padding-top: 40%;
}

/*Detail*/

.detailTitle {
	padding-left: 15px;
}

/*Aguacate*/

#aguacateOne{
	background-image: url('../images/aguacate_large_02.jpg');
}

#aguacateTwo{
	background-image: url('../images/aguacate_small_01.jpg');
}

#aguacateThree{
	background-image: url('../images/aguacate_large_01.jpg');
}

#aguacateFour{
	background-image: url('../images/aguacate_small_02.jpg');
}

#aguacateFive{
	background-image: url('../images/aguacate_small_03.jpg');
}

/*Carpenter*/

#carpenterOne {
	background-image: url('../images/carpenter_large_01.jpg');
}

#carpenterTwo{
	background-image: url('../images/carpenter_small_03.jpg');
}

#carpenterThree{
	background-image: url('../images/carpenter_large_02.jpg');
}

#carpenterFour{
	background-image: url('../images/carpenter_small_01.jpg');
}

#carpenterFive{
	background-image: url('../images/carpenter_small_02.jpg');
}

/*Korean Inspired Chest*/
#koreanOne {
	background-image: url('../images/korean_large_01.jpg');
}

#koreanTwo {
	background-image: url('../images/korean_small_03.jpg');
}

#koreanThree {
	background-image: url('../images/korean_large_02.jpg');
}

#koreanFour {
	background-image: url('../images/korean_small_01.jpg');
}

#koreanFive {
	background-image: url('../images/korean_small_02.jpg');
}

/*Stacking Cases*/
#stackingOne {
	background-image: url('../images/stacking_large_02.jpg');
}

#stackingTwo {
	background-image: url('../images/stacking_small_01.jpg');
}

#stackingThree {
	background-image: url('../images/stacking_large_01.jpg');
}

#stackingFour {
	background-image: url('../images/stacking_small_02.jpg');
}

#stackingFive {
	background-image: url('../images/stacking_small_03.jpg');
}

/*Tamago Table*/
#tamagoOne {
	background-image: url('../images/tamago_large_02.jpg');
}

#tamagoTwo {
	background-image: url('../images/tamago_small_03.jpg');
}

#tamagoThree {
	background-image: url('../images/tamago_large_01.jpg');
}

#tamagoFour {
	background-image: url('../images/tamago_small_01.jpg');
}

#tamagoFive {
	background-image: url('../images/tamago_small_02.jpg');
}

/*Kanna*/

#kannaOne {
	background-image: url('../images/tools_small_03.jpg');
}

#kannaTwo {
	background-image: url('../images/tools_large_01.jpg');
}

#kannaThree {
	background-image: url('../images/tools_small_01.jpg');
}

#kannaFour {
	background-image: url('../images/tools_small_02.jpg');
}

@media screen and (min-width: 600px) and (max-width: 800px) {
	/*NAVGIATION*/

	#logo {
	padding-top: 7%;
	}

	.vertical-center {
	  	min-height: 5%;  /* Fallback for browsers do NOT support vh unit */
	  	min-height: 5vh; /* These two lines are counted as one :-)       */

	 	 display: flex;
	  	align-items: center;
	}


	.footer {
		padding-left: 30px;
	}

	/*BASIC STYLING*/
	.row {
	margin: 75px 0px 75px 0px;
	}

	/*HOMEPAGE*/
	#homepageTwo {
		padding-top: 45%;
	}

	.row#textRow {
		padding: 75px 0px 100px 0px;
	}
}


@media screen and (max-width: 600px) {
	/*Mobile Navigation*/
	.navBarLinks {
		display: none !important;
	}

	.hamburger {
		display: initial !important;
		height: 50px;
		z-index: 2;
		display: inline-block;
    	cursor: pointer;
	}

	.bar1, .bar2, .bar3 {
	    width: 27px;
    	height: 2px;
    	background-color: #363636;
    	margin: 8px 0;
    	transition: 0.4s;
	}


	/* Rotate first bar */
	.change .bar1 {
	    -webkit-transform: rotate(-45deg) translate(-6px, 6px) ;
    	transform: rotate(-45deg) translate(-6px, 6px) ;
	}

	/* Fade out the second bar */
	.change .bar2 {
	    opacity: 0;
	}

	/* Rotate last bar */
	.change .bar3 {
	    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
    	transform: rotate(45deg) translate(-8px, -8px) ;
	}

	svg#instagram {
	height: 15px;
	}

	#logo {
	padding-top: 12%;
	}

	.row#footer {
		display: none !important;
	}

	hr.footer {
		display: none !important;
	}

	/*BASIC STYLING*/
	h1 {
		font-size: 28px;
	}

	h2 {
		font-size: 22px;
	}

	p {
		font-size: 14px;
	}

	h5 {
		font-size: 12px;
	}

	a {
		font-size: 12px;
	}

	.row {
	margin: 50px 0px 50px 0px;
	}

	/*HOMEPAGE*/
	.image12Column {
	padding-top: 65%;
	}

	.image5Column {
	padding-top: 50%;
	}

	#homepageTwo {
		margin-top: 25px;
	}

	#homepageThree {
		margin-top: 25px;
	}

	.row#textRow {
		padding: 50px 0px 75px 0px;
	}

	/*ABOUT*/
	#aboutOne.image5Column {
	background-image: url('../images/DSC_0108.jpg');
	padding-top: 90%;
	}

	/*Kanna*/
	#kannaOne{
		margin-top: 25px;
	}
}

